# bookweaver

./: .gitignore  .pycodestyle  CLAUDE.md  README.md  app.py  bookweaver.json  bookweaver_settings.json  calibrate_advisory.py  epub_io.py  kokoro.md  level_detector.py  llm.py  main.py  mlx_client.py  prompts.py  pyproject.toml  requirements-tts.txt  requirements.txt  settings.py  tts.py  widgets.py  wizard.py  wizard_logic.py  wizard_steps.py  wizard_theme.py  wizard_widgets.py  worker.py
docs/: mlx-lm-handover.md  todo.txt
docs/design_handoff_bookweaver_wizard/: BookWeaver Wizard.dc.html  README.md  ui-design-brief.md
docs/superpowers/notes/: 2026-07-03-cervantes-corpus-spike.md  2026-07-04-calibration-run-result.md
docs/superpowers/plans/: 2026-06-25-chapter-selection.md  2026-06-26-summary-key-ideas.md  2026-06-28-language-level-detector.md  2026-06-28-sliding-window-context-carry.md  2026-07-03-language-level-control.md  2026-07-07-mlx-lm-backend.md  2026-07-08-wizard-frontend.md  2026-07-14-chapter-order-and-names.md
docs/superpowers/specs/: 2026-06-25-chapter-selection-design.md  2026-06-26-summary-key-ideas-design.md  2026-06-29-tts-text-sanitization-design.md  2026-07-03-language-level-control-design.md  2026-07-07-mlx-lm-backend-design.md  2026-07-08-wizard-frontend-design.md  2026-07-14-chapter-order-and-names-design.md
tests/: conftest.py  test_calibrate_advisory.py  test_epub_io.py  test_level_detector.py  test_llm.py  test_prompts.py  test_settings.py  test_tts.py  test_wizard_logic.py  test_wizard_theme.py  test_worker.py
