[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bookweaver"
version = "0.1.0"
description = "EPUB → Spanish rewriter via local Ollama models"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "ebooklib>=0.18",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
bookweaver = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pycodestyle]
max-line-length = 100
ignore = ["E221"]
